cmake_minimum_required(VERSION 3.8)
project(robot_slam)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()


# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav2_map_server REQUIRED)
find_package(nav2_amcl REQUIRED)
find_package(nav2_lifecycle_manager REQUIRED)
find_package(slam_toolbox REQUIRED)
# find_package(ros2_lifecycle REQUIRED)

# install config launch maps params folder to share

install(DIRECTORY launch/
    DESTINATION share/${PROJECT_NAME}/launch)

install(DIRECTORY config/
    DESTINATION share/${PROJECT_NAME}/config)

install(DIRECTORY launch/
    DESTINATION share/${PROJECT_NAME}/launch)

install(DIRECTORY maps/
    DESTINATION share/${PROJECT_NAME}/maps)

install(DIRECTORY params/
    DESTINATION share/${PROJECT_NAME}/params)



if(BUILD_TESTING)
find_package(ament_lint_auto REQUIRED)
# the following line skips the linter which checks for copyrights
# comment the line when a copyright and license is added to all source files
set(ament_cmake_copyright_FOUND TRUE)
# the following line skips cpplint (only works in a git repo)
# comment the line when this package is in a git repo and when
# a copyright and license is added to all source files
set(ament_cmake_cpplint_FOUND TRUE)
ament_lint_auto_find_test_dependencies()
endif()


ament_package()
        