<?xml version="1.0"?>
<package format="3">

 <!-- Package Name and Version -->
    <name>robot_slam</name> 
    <version>0.0.1</version>
    <description>The robot_slam package for SLAM and Localization in simulation</description>
  
  <!-- Maintainer Information -->
  <maintainer email="akana_kim@icloud.com">kunama</maintainer>
  <!-- License (optional, but recommended to specify) -->
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>slam_toolbox</depend>
  
   <!-- Build Tool Dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <exec_depend>robot_localization</exec_depend> -->
  <exec_depend>ros-humble-slam-toolbox</exec_depend>
  <exec_depend>ros-humble-nav2-map-server</exec_depend>
  <exec_depend>ros-humble-nav2-amcl</exec_depend>
  <exec_depend>ros-humble-nav2-lifecycle-manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
