<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Package Name and Version -->
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>The robot description package containing URDF, meshes, and launch files.</description>
  
  <!-- Maintainer Information -->
  <maintainer email="akana_kim@icloud.com">kunama</maintainer>

  <!-- License (optional, but recommended to specify) -->
  <license>Apache-2.0</license>


  <!-- Build Tool Dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <exec_depend>robot_localization</exec_depend> -->
  <!-- Runtime Dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>  <!-- For publishing robot state -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ekf_node</exec_depend>

  <!-- <exec_depend>joint_state_publisher_gui</exec_depend> -->
  <exec_depend>xacro</exec_depend>                 <!-- If you're using XACRO files for URDF generation -->
  <exec_depend>rviz2</exec_depend>                 <!-- For visualizing the robot in RViz2 -->

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export the build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
